--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,17 @@
         <selenide.version>6.15.0</selenide.version>
         <testng.version>6.14.3</testng.version>
         <assertj.version>3.11.1</assertj.version>
+        <rest-assured.version>5.3.2</rest-assured.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>${rest-assured.version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
