--- a/src/test/api.properties
+++ b/src/test/api.properties
@@ -1,1 +1,3 @@
-url=http://petstore.swagger.io/
+url=https://petstore.swagger.io/
+url_book_store=https://demoqa.com/Account/
+url_book_collection=https://demoqa.com/BookStore/
